added missing controllers
