# api/openapi.yaml
@@ -310,6 +310,50 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /account/coins:
+    post:
+      summary: Get an Account's Unspent Coins
+      description: |
+        Get an array of all unspent coins for an AccountIdentifier and the
+        BlockIdentifier at which the lookup was performed. If your implementation
+        does not support coins (i.e. it is for an account-based blockchain),
+        you do not need to implement this endpoint. If you implementation does
+        support coins (i.e. it is fro a UTXO-based blockchain), you MUST
+        also complete the `/account/balance` endpoint.
+
+        It is important to note that making a coins request for an account
+        without populating the SubAccountIdentifier should not result in the
+        coins of all possible SubAccountIdentifiers being returned. Rather,
+        it should result in the coins pertaining to no SubAccountIdentifiers
+        being returned. To get all coins associated with an account, it may be
+        necessary to perform multiple coin requests with unique AccountIdentifiers.
+
+        Optionally, an implementation may choose to support updating an AccountIdentifier's
+        unspent coins based on the contents of the mempool. Note, using this functionality
+        breaks any guarantee of idempotency.
+      operationId: accountCoins
+      x-eov-operation-handler: controllers/AccountController
+      tags:
+        - Account
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AccountCoinsRequest'
+      responses:
+        '200':
+          description: Expected response to a valid request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AccountCoinsResponse'
+        '500':
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /construction/derive:
     post:
       summary: Derive an AccountIdentifier from a PublicKey
@@ -578,6 +622,126 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/TransactionIdentifierResponse'
+        '500':
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /call:
+    post:
+      summary: Make a Network-Specific Procedure Call
+      description: |
+        Call invokes an arbitrary, network-specific procedure call with network-specific
+        parameters. The guidance for what this endpoint should or could do is
+        purposely left vague. In Ethereum, this could be used to invoke `eth_call`
+        to implement an entire Rosetta API interface for some smart contract that
+        is not parsed by the implementation creator (like a DEX). This endpoint
+        could also be used to provide access to data that does not map
+        to any Rosetta models instead of requiring an integrator to use some
+        network-specific SDK and call some network-specific endpoint (like surfacing
+        staking parameters).
+
+        Call is NOT a replacement for implementing Rosetta API endpoints or mapping
+        network-specific data to Rosetta models. Rather, it enables developers to build
+        additional Rosetta API interfaces for things they care about without introducing
+        complexity into a base-level Rosetta implementation. Simply put, imagine
+        that the average integrator will use layered Rosetta API implementations
+        that each surfaces unique data.
+      operationId: call
+      x-eov-operation-handler: controllers/CallController
+      tags:
+        - Call
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CallRequest'
+      responses:
+        '200':
+          description: Expected response to a valid request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CallResponse'
+        '500':
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /events/blocks:
+    post:
+      summary: |
+        [INDEXER] Get a range of BlockEvents
+      description: |
+        `/events/blocks` allows the caller to query a sequence
+        of BlockEvents indicating which blocks were added and
+        removed from storage to reach the current state.
+        Following BlockEvents allows lightweight clients to update
+        their state without needing to implement their own syncing
+        logic (like finding the common parent in a reorg).
+
+        `/events/blocks` is considered an "indexer" endpoint
+        and Rosetta implementations are not required to complete it
+        to adhere to the Rosetta spec. However, any Rosetta "indexer"
+        MUST support this endpoint.
+      operationId: eventsBlocks
+      x-eov-operation-handler: controllers/EventsController
+      tags:
+        - Events
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/EventsBlocksRequest'
+      responses:
+        '200':
+          description: Expected response to a valid request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EventsBlocksResponse'
+        '500':
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /search/transactions:
+    post:
+      summary: |
+        [INDEXER] Search for Transactions
+      description: |
+        `/search/transactions` allows the caller to search for
+        transactions that meet certain conditions. Some conditions
+        include matching a transaction hash, containing an
+        operation with a certain status, or containing an operation
+        that affects a certain account.
+
+        `/search/transactions` is considered an "indexer" endpoint
+        and Rosetta implementations are not required to complete it
+        to adhere to the Rosetta spec. However, any Rosetta "indexer"
+        MUST support this endpoint.
+      operationId: searchTransactions
+      x-eov-operation-handler: controllers/SearchController
+      tags:
+        - Search
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SearchTransactionsRequest'
+      responses:
+        '200':
+          description: Expected response to a valid request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SearchTransactionsResponse'
         '500':
           description: unexpected error
           content:
