# src/server/controllers/AccountController.ts
@@ -1,14 +1,9 @@
 import Controller from './Controller';
-const { handleRequest } = Controller;
-
-/**
- * The AccountController file is a very simple one, which does not need to be changed manually,
- * unless there's a case where business logic reoutes the request to an entity which is not
- * the service.
- * The heavy lifting of the Controller item is done in Request.js - that is where request
- * parameters are extracted and sent to the service, and where response is handled.
- */
 
 export const accountBalance = async (request, response) => {
+    await Controller.handleRequest(request, response);
+};
+
+export const accountCoins = async (request, response) => {
     await Controller.handleRequest(request, response);
 };
