# src/server/controllers/EventsController.ts
@@ -1,0 +1,6 @@
+import Controller from './Controller';
+
+export const eventsBlocks = async (request, response) => {
+  await Controller.handleRequest(request, response);
+};
+
