# src/server/controllers/SearchController.ts
@@ -1,0 +1,5 @@
+import Controller from './Controller';
+
+export const searchTransactions = async (request, response) => {
+  await Controller.handleRequest(request, response);
+};
